game_macros/tests/ui/fail/missing_struct.rs
use game_macros::FieldIter;

#[derive(FieldIter)]
enum NotStruct {
    Foo,
}

fn main() {}
