game_macros/tests/ui/fail/missing_struct.stderr
error: proc-macro derive panicked
 --> tests/ui/fail/missing_struct.rs:3:10
  |
3 | #[derive(FieldIter)]
  |          ^^^^^^^^^
  |
  = help: message: FieldIter only works on structs with named fields
